--- a/index.ipynb
+++ b/index.ipynb
@@ -219,7 +219,7 @@
    "outputs": [],
    "source": [
     "names_and_ranks = []\n",
-    "# make sure the list is empty"
+    "for i in ra"
    ]
   },
   {
