--- a/index.ipynb
+++ b/index.ipynb
@@ -219,7 +219,8 @@
    "outputs": [],
    "source": [
     "names_and_ranks = []\n",
-    "for i in ra"
+    "for index in city_indices:\n",
+    "    name"
    ]
   },
   {
