Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -220,7 +220,7 @@
    "source": [
     "names_and_ranks = []\n",
     "for index in city_indices:\n",
-    "    current = index + 1"
+    "    current = str(index + 1) "
    ]
   },
   {
