Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -220,7 +220,8 @@
    "source": [
     "names_and_ranks = []\n",
     "for index in city_indices:\n",
-    "    current = str(index + 1) + '.' + city_names[index]"
+    "    current = str(index + 1) + '.' + 'city_names[index]\n",
+    "    "
    ]
   },
   {
