--- a/index.ipynb
+++ b/index.ipynb
@@ -247,16 +247,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'12. Iguazu Falls'"
+       "'1. Buenos Aires'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
    "source": [
     "names_and_ranks[0] # '1. Buenos Aires'\n",
     "#names_and_ranks[1] # '2. Toronto'\n",
-    "names_and_ranks[-1] # '12. Iguazu Falls'"
+    "#names_and_ranks[-1] # '12. Iguazu Falls'"
    ]
   },
   {
