--- a/index.ipynb
+++ b/index.ipynb
@@ -445,7 +445,8 @@
    "outputs": [],
    "source": [
     "city_areas = []\n",
-    "for cities in"
+    "for city in cities:\n",
+    "    city_areas"
    ]
   },
   {
