--- a/index.ipynb
+++ b/index.ipynb
@@ -446,7 +446,7 @@
    "source": [
     "city_areas = []\n",
     "for city in cities:\n",
-    "    city_areas"
+    "    city_areas.append(city['Area'])"
    ]
   },
   {
